# ffbuildtool

./: .gitignore  Cargo.toml  README.md  example_manifest.json  manifest_104.json
.github/workflows/: rust.yml
example_build/: main.unity3d
example_build_bad/: DongResources_00_09.resourceFile  DongResources_03_01.resourceFile  Map_00_00.unity3d  Map_01_03.unity3d
example_builds/compressed/good/: Map_00_00.unity3d  ignored_file.txt
example_builds/uncompressed/bad/dongresources_5f00_5f09_2eresourceFile/: CustomAssetBundle-52625066c401043eda0a3d5088cda126  __info
example_builds/uncompressed/bad/map_5f00_5f00_2eunity3d/: BuildPlayer-Map_00_00  BuildPlayer-Map_00_00.sharedAssets
example_builds/uncompressed/bad/map_5f01_5f03_2eunity3d/: BuildPlayer-Map_01_03  __info
example_builds/uncompressed/good/dongresources_5f00_5f09_2eresourceFile/: CustomAssetBundle-52625066c401043eda0a3d5088cda126
example_builds/uncompressed/good/dongresources_5f03_5f01_2eresourceFile/: CustomAssetBundle-081f9133ea588475d988f9d46b6cdbb6  __info
example_builds/uncompressed/good/map_5f00_5f00_2eunity3d/: __info
example_builds/uncompressed/good/map_5f01_5f03_2eunity3d/: BuildPlayer-Map_01_03.sharedAssets
examples/: download_build.rs  extract_bundle.rs  gen_bare.rs  gen_manifest.rs  repair_build.rs  validate_compressed.rs  validate_uncompressed.rs
src/: bundle.rs  lib.rs  tests.rs  util.rs
