[package]
name = "ffbuildtool"
version = "0.1.0"
authors = ["OpenFusion Contributors"]
edition = "2021"

[dependencies]
log = "0.4.22"
reqwest = "0.12.9"
rust-lzma = { version = "0.6.0", optional = true }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
env_logger = { version = "0.11.5", features = ["color"], optional = true }
clap = { version = "4.5.20", features = ["derive"], optional = true }

[lib]
name = "ffbuildtool"

[features]
default = ["lzma", "cli"]
lzma = ["dep:rust-lzma"]
cli = ["dep:clap", "dep:env_logger"]

[[bin]]
name = "ffbuildtool"
required-features = ["cli"]

[[example]]
name = "gen_manifest"

[[example]]
name = "validate_compressed"

[[example]]
name = "validate_uncompressed"

[[example]]
name = "extract_bundle"

[[example]]
name = "download_build"

[[example]]
name = "repair_build"

[dev-dependencies]
env_logger = { version = "0.11.5", features = ["color"] }
